--- a/Clase 1/ejercicioHorarioDeClase.html
+++ b/Clase 1/ejercicioHorarioDeClase.html
@@ -7,42 +7,45 @@
 </head>
 
 <body>
-    <table border=1>
-        <caption>Horario de clase</caption>
-        <tr>
-            <th>Hora</th>
-            <th>Lunes</th>
-            <th>Martes</th>
-            <th>Miercoles</th>
-            <th>Jueves</th>
-            <th>Viernes</th>
-        </tr>
-        <tr>
-            <td>8:00</td>
-            <td rowspan="2" valign="bottom">Fisica</td>
-            <td>Matematica</td>
-            <td>Literatura</td>
-            <td rowspan="2" valign="bottom">Matematica</td>
-            <td rowspan="2" valign="bottom">Español</td>
-        </tr>
-        <tr>
-            <td>10:00</td>
-            <td>Español</td>
-            <td>Artes</td>
-        </tr>
-        <tr>
-            <td>12:00</td>
-            <td>Matematica</td>
-            <td>Fisica</td>
-            <td>Filosofia</td>
-            <td>Español</td>
-            <td>Literatura</td>
-        </tr>
-        <tr>
-            <td>14:00</td>
-            <td colspan="5">Descanso</td>
-        </tr>
-    </table>
+    <p>
+        <table border=1>
+            <caption>Horario de clase</caption>
+            <tr>
+                <th>Hora</th>
+                <th>Lunes</th>
+                <th>Martes</th>
+                <th>Miercoles</th>
+                <th>Jueves</th>
+                <th>Viernes</th>
+            </tr>
+            <tr>
+                <td>8:00</td>
+                <td rowspan="2" valign="bottom">Fisica</td>
+                <td>Matematica</td>
+                <td>Literatura</td>
+                <td rowspan="2" valign="bottom">Matematica</td>
+                <td rowspan="2" valign="bottom">Español</td>
+            </tr>
+            <tr>
+                <td>10:00</td>
+                <td>Español</td>
+                <td>Artes</td>
+            </tr>
+            <tr>
+                <td>12:00</td>
+                <td>Matematica</td>
+                <td>Fisica</td>
+                <td>Filosofia</td>
+                <td>Español</td>
+                <td>Literatura</td>
+            </tr>
+            <tr>
+                <td>14:00</td>
+                <td colspan="5">Descanso</td>
+            </tr>
+        </table>
+    </p>
+    <a href="index.html">Atras</a>
 </body>
 
 </html>
