--- a/Clase 1/index.html
+++ b/Clase 1/index.html
@@ -7,7 +7,7 @@
         <ol>
             <h2>Clase 1</h1>
                 <li><a href="ejercicioHorarioDeClase.html">Ejercicio horario de clase</a></li>
-                <li>Ejercicio 1</li>
+                <li><a href="ejercicio1.html">Ejercicio 1</a></li>
         </ol>
     </body>
 </html>
