Cambios en estructura de carpeta

--- a/Index/Clase 1/ejercicio1.html
+++ b/Index/Clase 1/ejercicio1.html
@@ -49,7 +49,7 @@
             <li>Chuck Norris puede compilar C# con el compilador GNU GCC usando un Nokia 1100</li>
         </ul>
     </p>
-    <a href="index.html">Atras</a>
+    <a href="../index.html">Atras</a>
 </body>
 
 </html>
