--- a/Index/index.html
+++ b/Index/index.html
@@ -6,8 +6,8 @@
         <h1>Introduccion a PHP</h1>
         <ol>
             <h2>Clase 1</h1>
-                <li><a href="ejercicioHorarioDeClase.html">Ejercicio horario de clase</a></li>
-                <li><a href="ejercicio1.html">Ejercicio 1</a></li>
+                <li><a href="Clase 1/ejercicioHorarioDeClase.html">Ejercicio horario de clase</a></li>
+                <li><a href="Clase 1/ejercicio1.html">Ejercicio 1</a></li>
         </ol>
     </body>
 </html>
