--- a/Index/Clase 1/ejercicio1.html
+++ b/Index/Clase 1/ejercicio1.html
@@ -5,13 +5,18 @@
 </head>
 
 <body>
-    <h1>Hechos de Chuck Norris</h1>
-    <ol>
-        <li><a href="#parrafo1">Parrafo 1</a></li>
-        <li><a href="#parrafo2">Parrafo 2</a></li>
-        <li><a href="#parrafo3">Parrafo 3</a></li>
-        <li><a href="#hechos">Hechos de Chuck Norris</a></li>
-    </ol>
+    <p>
+        <h1>Hechos de Chuck Norris</h1>
+        <img src="../Recursos/chucknorris.jpg" height="360" width="640">
+    </p>
+    <p>
+        <ol>
+            <li><a href="#parrafo1">Parrafo 1</a></li>
+            <li><a href="#parrafo2">Parrafo 2</a></li>
+            <li><a href="#parrafo3">Parrafo 3</a></li>
+            <li><a href="#hechos">Hechos de Chuck Norris</a></li>
+        </ol>
+    </p>
     <a name="parrafo1"></a>
     <p>
         Los <strong>Hechos de Chuck Norris</strong> son factoides satiricos sobre el artista marcial y
