Cambios en estructura

--- a/Index/Clase 1/ejercicio1.html
+++ b/Index/Clase 1/ejercicio1.html
@@ -7,7 +7,7 @@
 <body>
     <p>
         <h1>Hechos de Chuck Norris</h1>
-        <img src="../Recursos/chucknorris.jpg" height="360" width="640">
+        <img src="../Recursos/chucknorris.jpg" height="30%" width="30%" alt="Chuck Norris doesn't have an ESC key on his computer">
     </p>
     <p>
         <ol>
@@ -54,7 +54,7 @@
             <li>Chuck Norris puede compilar C# con el compilador GNU GCC usando un Nokia 1100</li>
         </ul>
     </p>
-    <a href="../index.html">Atras</a>
+    <a href="indexClase1.html">Atras</a>
 </body>
 
 </html>
