--- a/Index/Clase 1/ejercicioHorarioDeClase.html
+++ b/Index/Clase 1/ejercicioHorarioDeClase.html
@@ -45,7 +45,7 @@
             </tr>
         </table>
     </p>
-    <a href="../index.html">Atras</a>
+    <a href="indexClase1.html">Atras</a>
 </body>
 
 </html>
