--- a/Index/index.html
+++ b/Index/index.html
@@ -3,11 +3,14 @@
         Introduccion a PHP
     </title>
     <body>
-        <h1>Introduccion a PHP</h1>
-        <ol>
-            <h2>Clase 1</h1>
-                <li><a href="Clase 1/ejercicioHorarioDeClase.html">Ejercicio horario de clase</a></li>
-                <li><a href="Clase 1/ejercicio1.html">Ejercicio 1</a></li>
-        </ol>
+        <p>
+                <h1>Introduccion a PHP</h1>
+        </p>
+        <p>
+            <ol>
+                <li><a href="Clase 1/indexClase1.html">Ejercicios Clase 1</a></li>
+            </ol>
+        </p>        
+        
     </body>
 </html>
