--- a/Index/index.html
+++ b/Index/index.html
@@ -9,6 +9,8 @@
         <p>
             <ol>
                 <li><a href="Clase 1/indexClase1.html">Ejercicios Clase 1</a></li>
+                <li><a href="Clase 2/indexClase2.html">Ejercicios Clase 2</a></li>
+                <li><a href="Clase 3/indexClase3.html">Ejercicios Clase 3</a></li>
             </ol>
         </p>        
         
