--- a/Index/Clase 3/indexClase3.html
+++ b/Index/Clase 3/indexClase3.html
@@ -17,6 +17,9 @@ and open the template in the editor.
             <li>
                 <a href="ejemplo2.html">Ejemplo 2</a>
             </li>
+            <li>
+                <a href="ejemplo3.html">Ejemplo 3</a>
+            </li>
         </ul>
         <p>
             <a href="../index.html">Volver al Indice</a>
