--- a/Index/Clase 2/indexClase2.html
+++ b/Index/Clase 2/indexClase2.html
@@ -9,14 +9,12 @@ and open the template in the editor.
         <title>Indice clase 2</title>
     </head>
     <body>
-        <p>
         <h1>Ejercicios clase 2</h1>
-        </p>
-        <p>
-            Vacio
-        </p
-        <p>
+        <ul>
+            <li><a href="ejercicio.html">Ejercicio Estilos</a></li>
+        </ul>
+        <footer>
             <a href="../index.html">Volver al Indice</a>
-        </p>
+        </footer>
     </body>
 </html>
